--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sri Mukhesh</title>
     <link rel="stylesheet" href = "styles.css">
+    <link rel="icon" href = "icon1.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>  
 </head>
