--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 <a href="#" style="--i:9"><i class='bx bxl-instagram'></i></a>
 
             </div>
-            <a href="#" class="btn-box">More About Me</a>
+            
+            <a href="https://drive.google.com/file/d/1ZXKCWsUW-rW5v11-TY1yFc8hN-D8R-4U/view?usp=sharing" class="btn-box">My Resume</a>
+            <br>
+            <br>
+            <a href="#about" class="btn-box">More About Me</a>
         </div>
         <span class="home-imghover"></span>
     </section>
