--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <p> I'm a student at IIT Bhubaneswar
             </p>
             <div class="home-sci">
-                <a href="#" style="--i:6"><i class='bx bxl-github'></i></a>
-                <a href="#" style="--i:7"><i class='bx bxl-linkedin'></i></a>
-                <a href="#" style="--i:8"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#" style="--i:9"><i class='bx bxl-instagram'></i></a>
+                <a href="https://github.com/SriMukheshSuru" style="--i:6"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/sri-mukhesh-suru-65775823a" style="--i:7"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://wa.link/zm3z1j" style="--i:8"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.instagram.com/_sri_mukhesh_suru_/" style="--i:9"><i class='bx bxl-instagram'></i></a>
 
             </div>
             
@@ -250,10 +250,10 @@
                     <li><i class="bx bxs-phone"></i>+91 8712260676</li>
                 </div>
                 <div class="contact-icons">
-                    <a href=""><i class='bx bxl-linkedin'></i></a>
-                    <a href=""><i class='bx bxl-whatsapp'></i></a>
-                    <a href=""><i class="bx bxl-instagram"></i></a>
-                    <a href=""><i class="bx bxl-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/sri-mukhesh-suru-65775823a"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://wa.link/zm3z1j"><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://www.instagram.com/_sri_mukhesh_suru_/"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://x.com/SrimukheshS"><i class="bx bxl-twitter"></i></a>
                 </div>
         </div>
         <div class="contact-form">
