--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         }
 
         if (isMobileDevice()) {
-            document.body.innerHTML = "<div style='text-align: center; padding: 50px; font-size: 18px;'>Please open this website on a larger screen like Laptop for a better experience.</div>";
+            document.body.innerHTML = "<div style='text-align: center; margin-top:250px; padding: 50px; font-size: 18px;'>Please open this website on a larger screen like Laptop for a better experience.</div>";
         }
     </script>
 
