--- a/index.html
+++ b/index.html
@@ -51,16 +51,13 @@
         </div>
         <div class="about-text">
             <h2>About<span>Me</span></h2>
-            <h4>Web Developer!</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Sit libero obcaecati cupiditate 
-                aliquam similique adipisci vero tenetur rem,
-                repudiandae sint hic reiciendis inventore,
-                sunt distinctio temporibus quaerat molestiae animi delectus?
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Obcaecati sed eveniet molestiae quam, distinctio repellendus 
-                harum fuga reiciendis repellat velit rem minima deserunt architecto 
-                saepe eaque voluptate maxime minus doloribus.
+            <h4>Hello Guys!</h4>
+            <p>I am Sri Mukhesh, a final-year student at IIT Bhubaneswar, passionate about Full Stack Development, AI, Machine
+            Learning, and Deep Learning. I specialize in building scalable web applications using HTML, CSS, JavaScript, React, and
+            Node.js while also leveraging my expertise in intelligent systems and data-driven solutions. Additionally, I am deeply
+            involved in Competitive Programming and Data Structures & Algorithms in C++, achieving a max rating of 1449 (Specialist)
+            on Codeforces, a LeetCode rating of 1893 (Knight), and a 4-Star Rating at Codechef. With a strong drive for
+            innovation and continuous learning, I strive to optimize solutions and explore cutting-edge technologies.
             </p>
             <a href="#" class="btn-box">More About Me</a>
 
