--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <img src="cp/codolio.jpg" alt="Project 2 Preview">
                 <div class="layer">
                     <h5>Codolio Profile</h5>
-                    <p>Ypu can check out the complete CP,DSA journey here </p>
+                    <p>You can check out the My complete CP,DSA journey here </p>
                     <a href="https://codolio.com/profile/Srimukheshsuru" target="_blank"><i class='bx bx-link'
                             style="color: black;"></i></a>
                 </div>
@@ -233,7 +233,7 @@
                 <div class="layer">
                     <h5>Codechef</h5>
                     <p>4 Star at codechef with a max rating of 1848</p>
-                    <a href="https://your-project-link4.com" target="_blank"><i class='bx bx-link'
+                    <a href="https://www.codechef.com/users/surusrimukhesh" target="_blank"><i class='bx bx-link'
                             style="color:black"></i></a>
                 </div>
             </div>
