--- a/index.html
+++ b/index.html
@@ -344,21 +344,22 @@
 
     <script>
         function isMobileDevice() {
-            return window.innerWidth <= 800; // Adjust threshold as needed
-        }
-
-        function blockMobileUsers() {
-            if (isMobileDevice()) {
-                document.documentElement.innerHTML = `
-                    <div style="text-align: center; margin-top: 250px; padding: 50px; font-size: 18px;">
-                        Please open this website on a larger screen like a laptop for a better experience.
-                    </div>
-                `;
+                return /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent) || window.innerWidth <= 800;
             }
-        }
 
-        blockMobileUsers();
-        window.addEventListener("resize", blockMobileUsers);
+            function blockMobileUsers() {
+                if (isMobileDevice()) {
+                    document.body.innerHTML = `
+            <div style="text-align: center; margin-top: 250px; padding: 50px; font-size: 18px;">
+                Please open this website on a larger screen like a laptop for a better experience.
+            </div>
+        `;
+                }
+            }
+
+            blockMobileUsers();
+            window.addEventListener("resize", blockMobileUsers);
+
     </script>
 
 
